fixed footer links wrapper gap

--- a/style.css
+++ b/style.css
@@ -866,9 +866,9 @@ header .navbar{
 }
 
 .links-wrapper{
-    width: 50vw;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .quicklinks{
